<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="118dp"
        android:layout_height="112dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="76dp"
        android:progressBackgroundTint="#E6D1FACA"
        android:progressTint="#4AEE04"
        app:layout_constraintEnd_toStartOf="@+id/progressBar4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="118dp"
        android:layout_height="112dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar4" />

    <ProgressBar
        android:id="@+id/progressBar5"
        style="?android:attr/progressBarStyle"
        android:layout_width="118dp"
        android:layout_height="112dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

    <ProgressBar
        android:id="@+id/progressBar6"
        style="?android:attr/progressBarStyle"
        android:layout_width="118dp"
        android:layout_height="112dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/progressBar5"
        app:layout_constraintHorizontal_bias="0.661"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar3"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="118dp"
        android:layout_height="112dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toStartOf="@+id/progressBar2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyle"
        android:layout_width="118dp"
        android:layout_height="112dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Course_One"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Course_Two"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar4"
        app:layout_constraintEnd_toEndOf="@+id/progressBar4"
        app:layout_constraintStart_toStartOf="@+id/progressBar4"
        app:layout_constraintTop_toTopOf="@+id/progressBar4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Course_Three"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar3"
        app:layout_constraintEnd_toEndOf="@+id/progressBar3"
        app:layout_constraintStart_toStartOf="@+id/progressBar3"
        app:layout_constraintTop_toTopOf="@+id/progressBar3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Course_Four"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="@+id/progressBar2"
        app:layout_constraintStart_toStartOf="@+id/progressBar2"
        app:layout_constraintTop_toTopOf="@+id/progressBar2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Course_Five"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar6"
        app:layout_constraintEnd_toEndOf="@+id/progressBar6"
        app:layout_constraintStart_toStartOf="@+id/progressBar6"
        app:layout_constraintTop_toTopOf="@+id/progressBar6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Course_Six"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar5"
        app:layout_constraintEnd_toEndOf="@+id/progressBar5"
        app:layout_constraintStart_toStartOf="@+id/progressBar5"
        app:layout_constraintTop_toTopOf="@+id/progressBar5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="330dp"
        android:layout_height="142dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/swanky_and_moo_moo"
        android:lineSpacingExtra="0sp"
        android:text="@string/Dash_Header"
        android:textAlignment="viewStart"
        android:textColor="#07C50A"
        android:textSize="45sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>